update point-service theo commonlb